# pymor

./: LICENSE  README.md  pymor.py  setup.cfg
pymor/: __init__.py  cli.py  model.py  obj.py  repl.py
