[metadata]
name = pymor
version = attr:pyksnk.__version__
license = "MIT License"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Langugae :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

author = "T. N. Hayashi"
author_email = "net@hayashi-lin.net"
description = "CHILDES MOR-like morphological analyzer"
keywords = "CHILDES MOR"

[options]
packages = find:
# include_package_data = true
install_requires =
    attrs
    typing
    ruamel.yaml
    prompt_toolkit<3

#[options.entry_points]
#console_scripts =
#    pyksnk = pyksnk.cli:cmd_main